# Ironshield

./: .env.example  .env.test.example  .gitignore  .npmrc  ADDRESSES.md  BACKEND_HANDOFF.md  CLAUDE.md  Dockerfile  LICENSE  LICENSE-MIT  README.md  SECURITY.md  SPRINT_PLAN.md  docker-compose.test.yml  docker-compose.yml  next.config.mjs  package-lock.json  package.json  playwright.config.ts  render.yaml  tmp-chunk.js
.claude/: launch.json  settings.local.json
agent/: activeMission.json  activePrompt.json  autonomousLoop.js  listenerState.json  loopState.json  nearAgent.js
backend/: package-lock.json  package.json  server.js
bot/: README.md  attach.js  index.js  setup.sh
contract/: Cargo.toml  CUsersSKYTONETironshieldstate.json  err.txt  error_log.txt  rust-toolchain.toml
contract-sui/: Move.toml  README.md
contract/newscoin/curve/: Cargo.toml
contract/newscoin/curve/src/: lib.rs
contract/newscoin/factory/: Cargo.toml
contract/newscoin/factory/src/: lib.rs
contract/newscoin/registry/: Cargo.toml
contract/newscoin/registry/src/: lib.rs
contract/newscoin/rhea-migrator/: Cargo.toml
contract/newscoin/rhea-migrator/src/: lib.rs
contract/src/: actions.rs  admin.rs  agents.rs  ft_callbacks.rs  governance.rs  kits.rs  lib.rs  migrate.rs  mission_engine.rs  missions.rs  pool.rs  pretoken.rs  pro.rs  treasury.rs  views.rs  web4.rs
deploy/: nginx.conf
docs/: CODEX_TASKS.md  SUI_AUTH_CONTRACT.md  SUI_CONTRACT_PORT_PLAN.md  SUI_MIGRATION_PLAN.md  UI_TOKENS.md  auth-contract.md  bridge-mainnet-evidence.json  bridge-mainnet-evidence.md  local-testing.md  (+9 more)
(+567 files in other folders)
